# workshadowai

./: WorkShadow_AI_Proposal.docx  WorkShadow_Master_Tasks.md  WorkShadow_Phase1_Build_Spec.md
workshadow-desktop/: package-lock.json  package.json
workshadow-desktop/.github/workflows/: ci.yml
workshadow-desktop/src/: App.tsx  index.css
workshadow-desktop/src-tauri/: Cargo.toml  tauri.conf.json
workshadow-desktop/src-tauri/src/: config.rs  lib.rs  main.rs  tray.rs
workshadow-desktop/src-tauri/src/capture/: encoder.rs  metadata.rs  mod.rs  pipeline.rs  screen.rs
workshadow-desktop/src-tauri/src/ipc/: commands.rs
workshadow-desktop/src-tauri/src/ocr/: dedup.rs  engine.rs  fast.rs  mod.rs  pii.rs  quality.rs
workshadow-desktop/src-tauri/src/privacy/: audit.rs  encryption.rs  exclusions.rs  keymanager.rs  mod.rs
workshadow-desktop/src-tauri/src/search/: index.rs  mod.rs
workshadow-desktop/src-tauri/src/storage/: db.rs  encrypted.rs  mod.rs  retention.rs  segments.rs
workshadow-desktop/src/components/: FilterPanel.tsx  FrameCard.tsx  SearchBar.tsx  StatusIndicator.tsx  TimelineStrip.tsx
workshadow-desktop/src/hooks/: useCaptureStatus.ts  useSearch.ts  useTimeline.ts
workshadow-desktop/src/lib/: ipc.ts
workshadow-desktop/src/views/: Onboarding.tsx  Search.tsx  Settings.tsx  Summary.tsx  Timeline.tsx
